# solvency-ai

./: .gitignore  APY-REALITY-CHECK.md  APY-UPDATE-SUMMARY.md  ARCHITECTURE-ASCII.md  ARCHITECTURE-DIAGRAM-SPEC.md  ARCHITECTURE.md  AUDIT-ALTERNATIVES.md  AUDIT-PREP.md  Anchor.toml  CODE-WALKTHROUGH.md  CTO-STRATEGIC-ANALYSIS.md  Cargo.toml  DEFI-RESEARCH-ROADMAP.md  DEMO-VIDEO-SCRIPT-V2.md  DEMO-VIDEO-SCRIPT.md  DEMO.md  DEPLOYMENT-ATTEMPT-LOG.md  DEPLOYMENT-BLOCKER.md  DEPLOYMENT-FINAL-REPORT.md  DEPLOYMENT-PLAN.md  DEPLOYMENT-STATUS-2026-02-11.md  DISTRIBUTION-TEMPLATES.md  Dockerfile  Dockerfile.build  EXECUTIVE-SUMMARY-CTO-ANALYSIS.md  FAQ.md  FORUM-POST-DRAFT.md  FORUM-POST-FINAL.txt  HACKATHON-CHECKLIST.md  INTEGRATION-GUIDE.md  LICENSE  MAINNET-DEPLOYMENT-PLAN.md  PLAYGROUND-CODE.md  PLAYGROUND-DEPLOY.md  POINTS-SYSTEM.md  PRE-LAUNCH-CHECKLIST.md  README.md  SECURITY-FIXES-APPLIED.md  SECURITY-FIXES-PRIORITY.md  SIMPLIFIED-VAULT.md  (+15 more)
app/: .env.example  package-lock.json  package.json
brand-v2/: ASSET-SPECIFICATIONS.md  BRAND-GUIDE-V2.md  COMPLETION-REPORT.md  DELIVERY-SUMMARY.md  DEPLOY.md  INDEX.md  NEXT-STEPS.md  README.md  START-HERE.md  TWITTER-BIO.txt  VISUAL-MOCKUPS.md  generate-twitter-assets.html  generate_assets.py  index.html  setup-dns-porkbun.sh
brand-v3-old/: BRAND-GUIDE.md  BRAND-STRATEGY.md  COMPLETION-REPORT.md  DELIVERY-SUMMARY.md  DNS-SETUP.md  PREVIEW.html  README.md  SITE-LIVE.md  START-HERE.txt  TOKEN-SPEC.md  for-humans.html  index-v2.html  index.html  security.html
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
(+54 files in other folders)
